not fix: core place block thingy issue (VERY ANNOYING) another issue is the discord randomly breaking (not sending log messages, but messages sent using sendMessageInstantly still works)